<resources>
    <string name="app_name">Conectate Unal</string>
    <string name="text_btn_ingresar">Ingresar</string>
    <string name="text_btn_registrarse">Registrarse</string>
    <string name="text_usuario">Usuario</string>
    <string name="text_clave">Clave</string>
    <string name="text_correo">Correo</string>
    <string name="text_confirmacion_clave">Confirmar Clave</string>
    <string name="text_btn_informacionEstudiante">Info del Estudiante</string>
    <string name="text_title_informacionEstudiante">Ingrese el identificador del estudiante</string>
    <string name="text_btn_agregarEstudiante">Agregar Estudiante</string>
    <string name="text_btn_eliminarEstudiante">Eliminar Estudiante</string>
    <string name="text_btn_eliminar">Eliminar</string>
    <string name="text_btn_Menu">Menú</string>
    <string name="text_btn_consultarConexiones">Consultar Conexiones</string>
    <string name="text_btn_consultarDeporte">Consultar Deporte</string>
    <string name="text_registro">Registro</string>
    <string name="text_nombres">Nombres: </string>
    <string name="text_apellidos">Apellidos: </string>
    <string name="text_cedula">CC:</string>
    <string name="text_anade_deportes">Agrega los deportes que …</string>
    <string name="text_practica">Practica</string>
    <string name="text_interesan">Le Interesan</string>
    <string name="text_mostrarEstudiante">Estos son los deportes que …</string>

</resources>