<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negroMelo"
    tools:context=".EliminarEstudiante">

    <LinearLayout
        android:layout_width="@dimen/anchoLinearLayout"
        android:layout_height="@dimen/alturaLinearLayout"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_eliminarEstudiante"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/letraTitulos" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="82dp"
            app:srcCompat="@drawable/calaberaicon" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/EliCedula"
            android:layout_width="@dimen/anchoCamposIngreso"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_cedula"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textSize="@dimen/letraCampos" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="@dimen/anchoBoton"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojoMelo"
            android:onClick="eliminarEstudiante"
            android:text="@string/text_btn_eliminar"
            android:textColor="@color/white"
            android:textSize="@dimen/letraTamanoBoton_Inicio"
            app:cornerRadius="@dimen/radioEsquinas" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>