<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negroMelo"
    tools:context=".Registro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="@dimen/anchoLinearLayout"
            android:layout_height="@dimen/alturaLinearLayout"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.355">

            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TableLayout
                android:id="@+id/layout_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="8dp"
                        android:layout_height="22dp"
                        app:srcCompat="@drawable/img" />

                    <EditText
                        android:id="@+id/registro_Correo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_correo"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/img_1" />

                    <EditText
                        android:id="@+id/registro_Clave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_clave"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/img_2" />

                    <EditText
                        android:id="@+id/registroconficlave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_confirmacion_clave"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registro_btn_registrarse"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rojoMelo"
                android:onClick="registrarUsuario"
                android:text="@string/text_btn_registrarse"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:cornerRadius="@dimen/radioEsquinas"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>