<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negroMelo"
    android:backgroundTint="@color/negroMelo"
    tools:context=".Iniciar_Sesion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/is_linearLayout"
            android:layout_width="@dimen/anchoLinearLayout"
            android:layout_height="@dimen/alturaLinearLayout"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.355">

            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="59dp"
                        android:layout_height="57dp"
                        app:srcCompat="@drawable/xd" />

                    <EditText
                        android:id="@+id/iniciar_sesionUsuario"
                        android:layout_width="306dp"
                        android:layout_height="57dp"
                        android:ems="10"
                        android:hint="@string/text_usuario"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/img_1" />

                    <EditText
                        android:id="@+id/iniciarSesionClave"
                        android:layout_width="@dimen/anchoCamposIngreso"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_clave"
                        android:inputType="textPassword"
                        android:textColorHint="@color/white" />

                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/in_btn_registrarse"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rojoMelo"
                android:onClick="iniciarSesion"
                android:text="@string/text_btn_ingresar"
                android:textColor="@android:color/white"
                android:textSize="@dimen/letraTamanoBoton_Inicio"
                app:cornerRadius="@dimen/radioEsquinas" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>